# opentelemetry-rust-exporter-gcp-cm

./: Cargo.toml  README.md  metrics.txt  metrix.json  rust_versions_install.sh  test.sh
examples/: basic-metrics.rs
examples/basic-metrics/: .gitignore  Cargo.toml
examples/basic-metrics/src/: main.rs
src/: error.rs  gcp_auth_authorizer.rs  gcp_authorizer.rs  gcp_authorizer_error.rs  lib.rs  opentelemetry.rs  test_utils.rs
src/exporter/: data_point_to_time_series.rs  histogram_data_point_to_time_series.rs  mod.rs  to_f64.rs  utils.rs
src/gcloud_sdk/: apis.rs  google_apis.rs  mod.rs
src/gcloud_sdk/genproto/: google.api.rs  google.monitoring.v3.rs  google.r#type.rs  google.rpc.rs
src/tests/: mod.rs  test_cloud_monitoring.rs  test_utils.rs
