[workspace]
members = ["examples/*"]

[package]
name = "opentelemetry_gcloud_monitoring_exporter"
version = "0.16.0"
description = "Provides support for exporting metrics to Google Cloud Monitoring."
readme = "README.md"
keywords = ["opentelemetry", "metrics", "exporter", "gcp", "cloud-monitoring"]
repository = "https://github.com/Sergo007/opentelemetry-rust-exporter-gcp-cm"
authors = ["Yatsina Serhii <yatsyna.sergey@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

[lib]
doctest = false

[features]
default = ["gcp_auth", "tokio"]
gcp_auth = ["dep:gcp_auth"]
tokio = ["dep:tokio", "opentelemetry_sdk/rt-tokio"]

[dependencies]
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29", features = [
    "metrics",
    "spec_unstable_metrics_views",
    "experimental_metrics_periodicreader_with_async_runtime",
] }

opentelemetry_resourcedetector_gcp_rust = { version = "0.16" }

async-trait = "0.1"

# json serializer/deserializer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "2.0.1", features = ["full"] }
url = { version = "2.5.0", package = "url" }
# Google sdk
gcp_auth = { version = "0.12", optional = true }
# gcloud-sdk = { version = "0.25", features = ["tls-roots", "google-monitoring-v3"] }
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = [
    "gzip",
    "tls",
    "tls-roots",
    "transport",
] }

unicode-segmentation = "1.12.0"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "sync",
    "time",
], optional = true }

rand = "0.9.0"
itertools = "0.14.0"
tracing = { version = "0.1.41" }

[dependencies.darrentsung_debug_parser]
version = "0.3.1"

[dependencies.hyper]
version = "1"
features = ["client", "http2"]

[dev-dependencies]
once_cell = "1.21.1"
pretty_assertions = "1.4.1"
# todo contribute to the project to add the sorted feature
pretty_assertions_sorted_fork = { version = "0.10.0" }
tokio = { version = "1.0", features = ["full"] }
