[package]
name = "basic-metrics"
version = "0.1.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

[dependencies]
opentelemetry_gcloud_monitoring_exporter = { path = "../..", features = [
    "tokio",
    "opentelemetry_0_27",
    "gcp_auth",
] }
tokio = { version = "1.0", features = ["full"] }
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry_resourcedetector_gcp_rust = "0.14.0"
# json serializer/deserializer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
